# silt

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example_client.py  release-plz.toml
.github/workflows/: docker-publish.yml  release-plz.yml
src/: batch_worker.rs  config.rs  handlers.rs  main.rs  models.rs  openai_client.rs  state.rs
